--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,1 @@
-The RestAuth webservice was written by Mathias Ertl <mati@fsinf.at>.
+The RestAuth webservice was written by Mathias Ertl <mati@restauth.net>.
