--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+RestAuth 0.5.1 (10 September 2011)
+
+  * Also install RestAuth.Test
+
 RestAuth 0.5.0 (29 August 2011)
 
   * Initial version based on version 0.5 of the RestAuth protocol.
