--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 RestAuth 0.5.1 (10 September 2011)
 
-  * Also install RestAuth.Test
+  * Also install RestAuth.Test (this should have been installed).
+  * Add this ChangeLog.
 
 RestAuth 0.5.0 (29 August 2011)
 
