--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+RestAuth 0.5.2 (XXX)
+
+  * Fix many spelling mistakes in the documentation
+  * Add documentation on running multiple instances on the same host
+
 RestAuth 0.5.1 (10 September 2011)
 
   * Also install RestAuth.Test (this should have been installed).
