--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ RestAuth 0.5.2 (XXX)
 
   * Fix many spelling mistakes in the documentation
   * Add documentation on running multiple instances on the same host
+  * Add basic routers (including documentation) for common replication scenarios
 
 RestAuth 0.5.1 (10 September 2011)
 
