--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ RestAuth 0.5.2 (XXX)
   * Fix many spelling mistakes in the documentation
   * Add documentation on running multiple instances on the same host
   * Add basic routers (including documentation) for common replication scenarios
+  * Adapt to changes in RestAuthCommon (CONTENT_HANDLERS now is in
+    RestAuthCommon.handlers)
+  * No longer use deprecated functions in RestAuthCommon
 
 RestAuth 0.5.1 (10 September 2011)
 
