--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,9 @@ RestAuth 0.5.3 (XX XX 20XX)
       former)
     * validators are now classes instead of functions
     * rewritten and optimized the validation function
+  * new 'drupal' validator that actually uncovers a bug in Drupal (see
+    documentation). This validator is much more restrictive than drupal
+    at this moment.
 
   Documentation:
   * Improved documentation in lots of places
