--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 RestAuth 0.5.3 (XX XX 20XX)
 
+  General:
+  * There were some schema updates. Please read:
+    	https://server.restauth.net/install/upgrade.html
+
+  Users:
+  * Add database index for the username.
+
   Passwords:
   * Support empty salts (some legacy systems to not use a salt)
   * You can now implement support for a custom hash and add it to RestAuth
@@ -27,7 +34,10 @@ RestAuth 0.5.3 (XX XX 20XX)
   * some code-cleanup (remove one-line functions, etc.)
 
   Documentation:
+  * Add database index for the groupname
+  * Improve speed of getting groups of a user
   * Improved documentation in lots of places
+  * Add upgrade notes
 
 RestAuth 0.5.2 (13 November 2011)
 
