--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ RestAuth 0.5.3 (XX XX 20XX)
   General:
   * There were some schema updates. Please read:
     	https://server.restauth.net/install/upgrade.html
+  * setup.py includes the new target build_html
 
   Users:
   * Add database index for the username.
