--- a/ChangeLog
+++ b/ChangeLog
@@ -3,14 +3,17 @@ RestAuth 0.5.3 (XX XX 20XX)
   General:
   * There were some schema updates. Please read:
     	https://server.restauth.net/install/upgrade.html
+  * Removed the migration directory, as the scripts there are now maintained in
+    a dedicated git repository:
+        https://git.fsinf.at/restauth/migration
 
   Users:
   * Add database index for the username.
 
   Passwords:
   * Support empty salts (some legacy systems to not use a salt)
-  * You can now implement support for a custom hash and add it to RestAuth
-    using the HASH_FUNCTIONS setting
+  * You can now implement support for a custom hash and add it to RestAuth using
+    the HASH_FUNCTIONS setting
   * Support two new algorithms:
     * 'crypt': Store passwords using the systems 'crypt' routine
     * 'apr1': Store passwords using the apache modified version of MD5
@@ -26,8 +29,8 @@ RestAuth 0.5.3 (XX XX 20XX)
     * validators are now classes instead of functions
     * rewritten and optimized the validation function
   * new 'drupal' validator that actually uncovers a bug in Drupal (see
-    documentation). This validator is much more restrictive than drupal
-    at this moment.
+    documentation). This validator is much more restrictive than drupal at this
+    moment.
 
   Groups:
   * Speed up group creation
