--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@ RestAuth 0.5.3 (XX XX 20XX)
   * Removed the migration directory, as the scripts there are now maintained in
     a dedicated git repository:
         https://git.fsinf.at/restauth/migration
+  * Add a test fixture that can be used by the manage.py testserver. setup.py
+    now includes a 'testserver' command that automatically loads that fixture.
+    Libraries that require a testserver for testing should run
+    'setup.py testerver' instead of the now deprecated test.sh script.
 
   Users:
   * Add database index for the username.
