--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-restauth (0.5.2-64-ge477615-1) unstable; urgency=low
+restauth (0.5.2-72-g6d327bb-1) unstable; urgency=low
 
   * bump from upstream
 
