--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ RestAuth 0.5.3 (XX XX 20XX)
     receive this variable otherwise. Likewise, the DJANGO_SETTINGS_MODULE is passed through if set.
   * Generated passwords no longer contain whitespace, a backslash, single or double quotes.
   * Fix a bug that broke Service passwords with a colon (':')
+  * Most of the code now adheres to python coding standards.
   
   build-related:
   * The 'debian' branch now includes a ready-to-use debian package.
