Added installation instructions for ArchLinux

--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,7 @@ RestAuth 0.5.3 (XX XX 20XX)
   * Add minimal manpage for restauth-manage
   * Add developer/testserver documenting how to run a testserver for library testing
   * Add installation instructions for RHEL and Fedora
+  * Add installation instructions for ArchLinux
 
 RestAuth 0.5.2 (13 November 2011)
 
