--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 0.5.4:
 
 * Add schema-upgrades now found in the 0.5.4 branch
+* Add a config-variable that enables the admin interface
 
 Future:
 
