--- a/TODO
+++ b/TODO
@@ -3,7 +3,9 @@
 * Add new API call for setting multiple properties
 * Add a config-variable that enables the admin interface
 * see if the resource_validator function costs too much performance
-* Automatically set date_created property
+* Remove date_joined and last_login database fields, they should be
+  implemented as a property
+* Automatically set the 'date joined' property upon user-creation
 
 Future:
 
