--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ RestAuth 0.6.0 (XX XX 20XX)
   * Migration to Django generic class-based views
   * Globally cache username validators and pasword hashers
   * Automatically set the 'date joined' property upon user creation
+  * New setting GROUP_RECURSION_DEPTH defines level of group recursion
 
   Compliance with RestAuth:
   * This release complies with RestAuth 0.6, adding support for setting
