display services in alphabetical order

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+RestAuth 0.6.1 (DD MMMM YYYY)
+
+  * Fix a broken Foreign Key constraint that broke adding IP-Adresses to
+    services.
+  * Display services in alphabetical order
+
+
 RestAuth 0.6.0 (15 September 2012)
 
   General:
