--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-restauth (0.6.0-4-g419dcb8-1) unstable; urgency=low
+restauth (0.6.0-5-gf4efead-1) unstable; urgency=low
 
   * Minor improvements from git
 
