update TODO list

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@
   * How-To write custom hashers rewrite
   * Split backends and writing backends.
 * Optional support for storing passwords in a cache.
+* Add UWSGI files to documentation, so they can be referenced
+* kill the last epydoc related documentation
 
 Future:
 
