--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
 * Add UWSGI files to documentation, so they can be referenced
 * kill the last epydoc related documentation
 * move cli-scripts to RestAuth/bin
+* Make content type handlers global objects that are never reloaded
+  (like password hashers)
 
 Future:
 
