--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
   (like password hashers)
 * Use GenericIpAddressField for Services
 * Cache Services information
+* RestAuth.common.decorates contains Django 1.3 code
 
 Future:
 
