--- a/ChangeLog
+++ b/ChangeLog
@@ -27,13 +27,13 @@ RestAuth 0.6.1 (DD MMMM YYYY)
     the input data format both faster and more exact.
 
   Caching:
-  * The CACHES setting is no longer overriden by settings, enabling the django
-    default caching for various views. Cache middlewares are now in the
-	default MIDDLEWARE_CLASSES configuration.
+  * The CACHES setting is no longer overriden by settings, enabling Djangos
+	in-memory caching mechanisms by default.
+  * The cache middlewares are no longer automatically added, as they
+    introduced unreliable behaviour in some situations.
   * The new SECURE_CACHE setting tells RestAuth if the cache can be considered
     a secure data storage (default: False). If True, Django will cache service
-	information and password hashes within the cache, significantly speeding
-	up RestAuth.
+	information within the cache, significantly speeding up RestAuth.
 
   Command-line scripts:
   * Move all scripts to RestAuth/bin/ to be more virtualenv friendly.
