--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 0.6.1:
-None.
+* Use HttpRequest.get_host() for services
+  https://docs.djangoproject.com/en/1.5/ref/request-response/#django.http.HttpRequest.get_host
+* Fix compatablity issues with Pytho2.6 (@skipUnless)
+
 
 Future:
 
